# 10EQS_EVAL

./: EDA.ipynb  README.md  pyproject.toml  report.md  requirements.txt
data/: products.csv
src/: analysis.py  utils.py
