[tool.poetry]
name = "10-eqs-eval"
version = "0.1.0"
description = ""
authors = ["sebas1193"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.0"
notebook = "^7.3.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
